# status-monitor

./: .gitignore  Cargo.toml  README.md  status-monitor-config.yml.template
src/: config.rs  controller.rs  daily_report.rs  endpoint.rs  main.rs  telegram_api.rs  timeouts.rs
